--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,4 +1,9 @@
-<div class="pt-8 px-4 pb-60 max-w-6xl mx-auto lg:px-12">
+
+<div class="hidden lg:block">
+  <%= render "shared/navbar" %>
+</div>
+
+<div class="px-4 pt-8 pb-60 max-w-6xl mx-auto lg:px-12">
 
   <div class="pb-2 flex items-center justify-between">
     <div class="py-2 px-2 lg:py-4">
@@ -20,5 +25,3 @@
     <p> <%= @article.rich_body %> </p>
   </div>
 </div>
-
-
