--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -82,7 +82,7 @@
                   </div>
                 </div>
               <% else %>
-                <div class="px-2 pt-2 space-x-2 flex items-center">
+                <div class="px-2 pt-2 space-x-2 flex items-center justify-between">
                   <span class="font-medium text-gray-800"> <%= item.price %>€ </span>
                   <span class="px-2 py-0.5 text-gray-700 bg-japonica-200 rounded-full text-xs italic font-semibold tracking-wide">Livraison gratuite</span>
                 </div>
@@ -116,7 +116,7 @@
                 </div>
               </div>
             <% else %>
-              <div class="px-2 pt-2 space-x-2 flex items-center">
+              <div class="px-2 pt-2 space-x-2 flex items-center justify-between">
                 <span class="font-medium text-gray-800"> <%= item.price %>€ </span>
                 <span class="px-2 py-0.5 text-gray-700 bg-japonica-200 rounded-full text-xs italic font-semibold tracking-wide">Livraison gratuite</span>
               </div>
