--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,25 +3,25 @@
   <%= render "shared/navbar" %>
 </div>
 
-<div class="px-4 pt-8 pb-36 max-w-6xl mx-auto lg:px-12">
+<div class="px-4 pt-8 pb-40 max-w-prose mx-auto lg:px-12">
 
-  <div class="pb-2 flex items-start justify-between">
-    <div class="-mt-2">
+  <div class="pb-2 flex flex-col items-start">
+    <div class="-mt-2 lg:hidden">
       <%= link_to articles_path, class:'text-gray-700 focus:outline-none hover:text-gray-400' do %>
         <svg class="w-8 h-8 fill-current" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"/></svg>
       <% end %>
     </div>
 
-    <div class="flex flex-col items-end">
+    <div class="pt-2 flex flex-col items-start">
       <span class="text-japonica-500 text-sm font-semibold lg:text-lg"><%= @article.category %></span>
       <span class="text-gray-700 text-xl font-bold font-cursive lg:text-2xl"><%= @article.title %></span>
     </div>
   </div>
-  <div class="relative h-80 w-full">
+  <div class="relative h-64 w-full">
     <%= cl_image_tag @article.photo.key, class:'absolute h-full w-full inset-0 object-cover shadow rounded' %>
   </div>
 
-  <div class="pt-8 text-gray-600 max-w-prose">
+  <div class="pt-8 text-gray-600 max-w-prose mx-auto">
      <%= @article.rich_body %>
   </div>
 </div>
