--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,8 +1,8 @@
 <div class="px-4 pt-8 pb-36 max-w-xl mx-auto lg:max-w-7xl lg:py-16">
-  <h2 class="font-bold text-gray-700 text-3xl text-center">Journal</h2>
-  <p class="pt-2 text-gray-500 text-center max-w-md mx-auto">Voici quelques articles sur la céramique que j'ai écris !</p>
+  <h2 class="text-3xl font-medium font-cursive text-left text-gray-800 tracking-tight lg:text-4xl">Journal</h2>
+  <p class="pt-2 text-sm text-gray-500 max-w-md">Si vous souhaitez en apprendre plus, voici quelques articles sur la céramique que j'ai écris !</p>
 
-  <div class="pt-6 flex flex-col space-y-4 lg:space-y-0 lg:justify-center lg:space-x-4 lg:flex-row lg:relative">
+  <div class="pt-6 flex flex-col space-y-4 lg:space-y-0 lg:space-x-4 lg:flex-row lg:relative">
     <% @articles.each do |article| %>
       <%= link_to article_path(article), class:"bg-white lg:w-1/3 rounded overflow-hidden shadow-2xl" do %>
         <!-- photo on mobile small fix for now need to create padding bottom for tailwind in config file -->
