--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,7 +9,7 @@
             <h1 class="text-gray-700 font-bold font-cursive tracking-tight text-3xl xl:text-4xl 2xl:text-5xl">Objets en céramique <br> fait main</h1>
           </div>
           <div class="pt-12 flex justify-center lg:justify-start px-4 lg:pt-16">
-            <%= link_to "Découvrir", items_path, class:'py-3 px-4 text-base text-white font-bold bg-japonica-500 border-2 border-white rounded-xl tracking-wide hover:bg-gray-700 hover:text-white focus:outline-none lg:text-lg xl:px-6 xl:py-4 xl:text-xl' %>
+            <%= link_to "Découvrir", items_path, class:'py-3 px-4 text-base text-white font-bold bg-japonica-500 border-2 border-white rounded-full tracking-wide hover:bg-gray-700 hover:text-white focus:outline-none lg:text-lg xl:px-6 xl:py-4 xl:text-xl' %>
           </div>
         </div>
         <div class="hidden lg:flex lg:absolute lg:w-full lg:pl-8 lg:-right-1/3 lg:-top-1/3 ">
