--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,16 +4,16 @@
 
     <div class="lg:h-5/6 lg:w-360 lg:mx-auto h-almostscreen">
       <div class="h-1/2 lg:h-full relative z-10">
-        <div class="lg:flex lg:flex-col lg:justify-center lg:h-full lg:px-16 2xl:px-0.5">
-          <div class="pt-16 px-4 text-center lg:text-left">
+        <div class="absolute top-1/4 inset-x-0 lg:top-1/3 lg:flex lg:flex-col">
+          <div class="px-4 text-center lg:text-left">
             <h1 class="text-gray-700 font-bold font-cursive tracking-tight text-3xl xl:text-4xl 2xl:text-5xl">Objets en céramique <br> fait main</h1>
           </div>
-          <div class="pt-12 flex justify-center lg:justify-start px-4 lg:pt-16">
+          <div class="pt-4 flex justify-center lg:justify-start px-4 lg:pt-16">
             <%= link_to "Découvrir", items_path, class:'py-3 px-4 text-base text-white font-bold bg-japonica-500 border-2 border-white rounded-full tracking-wide hover:bg-gray-700 hover:text-white focus:outline-none lg:text-lg xl:px-6 xl:py-4 xl:text-xl' %>
           </div>
         </div>
         <svg class="hidden lg:block z-10 absolute left-1/3 inset-y-0 w-48 h-banner text-white transform translate-x-1/2" fill="currentColor" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true">
-          <polygon points="50,0 100,0 50,100 0,100" />
+          <polygon points="39,0 100,0 50,100 0,100" />
         </svg>
         <div class="hidden z-0 lg:flex lg:absolute lg:w-full lg:-right-1/2 lg:-top-1/3 ">
           <%= image_tag 'https://images.unsplash.com/photo-1596986589387-1f541e827e0f?ixid=MXwxMjA3fDB8MHxzZWFyY2h8Mnx8Y2VyYW1pY3xlbnwwfDF8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60', class:'lg:w-full lg:object-cover lg:h-banner', alt:'#' %>
