--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,7 +12,7 @@
             <%= link_to "Découvrir", items_path, class:'py-3 px-4 text-base text-white font-bold bg-japonica-500 border-2 border-white rounded-full tracking-wide hover:bg-gray-700 hover:text-white focus:outline-none lg:text-lg xl:px-6 xl:py-4 xl:text-xl' %>
           </div>
         </div>
-        <svg class="hidden lg:block z-10 absolute left-1/3 inset-y-0 w-48 h-banner text-white transform translate-x-1/2" fill="currentColor" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true">
+        <svg class="hidden lg:block z-10 absolute left-1/3 inset-y-0 w-48 h-banner text-gray-50 transform translate-x-1/2" fill="currentColor" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true">
           <polygon points="39,0 100,0 50,100 0,100" />
         </svg>
         <div class="hidden z-0 lg:flex lg:absolute lg:w-full lg:-right-1/2 lg:-top-1/3 ">
