added somes transition

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -65,7 +65,7 @@
     <div data-item-categories-target="allCategory" class="hidden">
       <% @items.each do |item| %>
         <%= link_to item_path(item), class:"group" do %>
-            <div class="relative shadow-3xl rounded pb-2 lg:shadow-none lg:border-gray-200 lg:border lg:border-opacity-70 lg:hover:shadow-3xl focus:outline-none">
+            <div class="relative shadow-3xl rounded pb-2 lg:shadow-none lg:border-gray-200 lg:border lg:border-opacity-70 lg:hover:shadow-3xl focus:outline-none transition duration-300 ease-in-out">
               <div class="relative pb-4/5" >
                 <%= cl_image_tag item.photos[0].key, class:"rounded-t absolute h-full w-full inset-0 object-cover #{image_position(item)} shadow", alt:"Objet en céramique"  %>
               </div>
@@ -99,7 +99,7 @@
       <div data-type="<%= category %>" data-item-categories-target="category" class="hidden">
         <% @items.where(category: category).each do |item| %>
           <%= link_to item_path(item), class:"group" do %>
-          <div class="relative shadow-3xl rounded pb-2 lg:shadow-none lg:border-gray-200 lg:border lg:border-opacity-70 lg:hover:shadow-3xl focus:outline-none">
+          <div class="relative shadow-3xl rounded pb-2 lg:shadow-none lg:border-gray-200 lg:border lg:border-opacity-70 lg:hover:shadow-3xl focus:outline-none transition duration-300 ease-in-out">
             <div class="relative pb-4/5">
               <%= cl_image_tag item.photos[0].key, class:"rounded-t absolute h-full w-full inset-0 object-cover #{image_position(item)} shadow", alt:"Objet en céramique"  %>
             </div>
