--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,8 +8,8 @@
           <div class="px-4 text-center lg:text-left">
             <h1 class="text-gray-700 font-bold font-cursive tracking-tight text-3xl xl:text-4xl 2xl:text-5xl">Objets en céramique <br> fait main</h1>
           </div>
-          <div class="pt-4 flex justify-center lg:justify-start px-4 lg:pt-16">
-            <%= link_to "Découvrir", items_path, class:'py-3 px-4 text-base text-white font-bold bg-japonica-500 border-2 border-white rounded-full tracking-wide hover:bg-gray-700 hover:text-white focus:outline-none lg:text-lg xl:px-6 xl:py-4 xl:text-xl' %>
+          <div class="pt-6 flex justify-center lg:justify-start px-4 lg:pt-16">
+            <%= link_to "Découvrir", items_path, class:'py-3 px-4 text-base text-white font-bold bg-japonica-500 border-2 border-white rounded-full tracking-wide hover:bg-gray-700 hover:text-white focus:outline-none transition duration-500 ease-in-out lg:text-lg xl:px-6 xl:py-4 xl:text-xl' %>
           </div>
         </div>
         <svg class="hidden lg:block z-10 absolute left-1/3 inset-y-0 w-48 h-banner text-gray-50 transform translate-x-1/2" fill="currentColor" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true">
@@ -90,7 +90,7 @@
       <div class="px-4 pb-2 inline-flex space-x-2 md:px-8 lg:justify-center lg:grid lg:grid-cols-3 lg:space-x-0 lg:gap-4 lg:px-16 2xl:px-0.5 ">
         <% @items.first(6).each do |item| %>
           <%= link_to item_path(item), class:"" do %>
-            <div class="relative pb-2 w-72 rounded-lg lg:w-full border-gray-200 border border-opacity-70 hover:shadow-3xl focus:outline-none">
+            <div class="relative pb-2 w-72 rounded-lg lg:w-full border-gray-200 border border-opacity-70 hover:shadow-3xl focus:outline-non transition duration-300 ease-in-out">
               <div class="relative h-68 lg:h-full pb-4/5">
                <%= cl_image_tag item.photos[0].key, class:"rounded-t absolute h-full w-full inset-0 object-cover #{image_position(item)} shadow", alt:'objet en céramique' %>
               </div>
@@ -135,7 +135,7 @@
       <div class="pt-8 grid grid-cols-2 gap-2 lg:flex lg:justify-center max-w-xl mx-auto lg:pt-0 lg:max-w-4xl">
 
   <!--       premier article le plus récent -->
-        <%= link_to article_path(Article.last), class:"col-span-2 bg-white lg:w-1/2 overflow-hidden shadow-lg rounded lg:order-2 lg:my-12" do %>
+        <%= link_to article_path(Article.last), class:"col-span-2 bg-white lg:w-1/2 overflow-hidden rounded border-gray-200 border border-opacity-70 hover:shadow-3xl focus:outline-none transition duration-300 ease-in-out lg:order-2 lg:my-12" do %>
           <div class="relative" style="padding-bottom: 85%;">
             <span> <%= cl_image_tag Article.last.photo.key, class:'absolute h-full w-full inset-0 object-cover object-center shadow', alt:'article illustration' %> </span>
           </div>
@@ -158,7 +158,7 @@
 
   <!-- deux autres article les plus récent après celui au dessus en petit en dessous -->
         <% if Article.all.count >= 3 %>
-        <%= link_to article_path(@articles[1]), class:"bg-white lg:w-1/4 lg:mx-4 overflow-hidden shadow-lg rounded lg:order-1 lg:my-48" do %>
+        <%= link_to article_path(@articles[1]), class:"bg-white lg:w-1/4 lg:mx-4 overflow-hidden rounded border-gray-200 border border-opacity-70 hover:shadow-3xl focus:outline-none transition duration-300 ease-in-out lg:order-1 lg:my-48" do %>
             <div class="relative pb-4/5">
               <span> <%= cl_image_tag @articles[1].photo.key, class:'absolute h-full w-full inset-0 object-cover object-center shadow' %> </span>
             </div>
@@ -176,7 +176,7 @@
             </div>
           <% end %>
 
-          <%= link_to article_path(@articles[2]), class:"bg-white lg:w-1/4 lg:mx-4 overflow-hidden shadow-lg rounded lg:order-3 lg:my-48" do %>
+          <%= link_to article_path(@articles[2]), class:"bg-white lg:w-1/4 lg:mx-4 overflow-hidden rounded border-gray-200 border border-opacity-70 hover:shadow-3xl focus:outline-none transition duration-300 ease-in-out lg:order-3 lg:my-48" do %>
             <div class="relative pb-4/5">
               <span> <%= cl_image_tag @articles[2].photo.key, class:'absolute h-full w-full inset-0 object-cover object-center shadow' %> </span>
             </div>
