--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -2,7 +2,7 @@
 
   <div class="px-2 pt-8 pb-40 max-w-7xl mx-auto lg:px-4">
     <div class="flex justify-between">
-      <%= button_to 'Vider le panier', @cart, method: :delete, data: { confirm: "Etes-vous sur?" }, class:'bg-white text-gray-500 underline focus:outline-none' %>
+      <%= button_to 'Vider le panier', @cart, method: :delete, data: { confirm: "Etes-vous sur?" }, class:'bg-white text-gray-500 underline focus:outline-none cursor-pointer' %>
       <%= link_to "Continuer mes achats", items_path, class:'text-gray-500 underline focus:outline-none' %>
     </div>
     <div class="lg:pt-4 lg:flex lg:flex-row-reverse lg:items-start">
