--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -62,7 +62,7 @@
 
 
           <div class="pt-2">
-            <%= f.button :submit, "Valider", class:"py-4 w-full text-lg text-white font-bold bg-gray-900 rounded-xl cursor-pointer focus:outline-none" %>
+            <%= f.button :submit, "Valider", class:"py-4 w-full text-lg text-white font-bold bg-gray-900 rounded-xl cursor-pointer focus:outline-none " %>
           </div>
         </div>
       <% end %>
@@ -73,7 +73,7 @@
         <svg class="w-20 h-16" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 89 1"><path stroke="#A09F9F" d="M0 .5h89"/></svg>
       </div>
       <div class="flex justify-center">
-        <%= link_to "Se connecter",  new_user_session_path, class:'py-4 text-center w-full text-lg text-gray-800 font-bold bg-white border-2 border-gray-200 rounded-xl focus:outline-none hover:text-japonica-500 hover:border-japonica-300 ' %>
+        <%= link_to "Se connecter",  new_user_session_path, class:'py-4 text-center w-full text-lg text-gray-800 font-bold bg-white border-2 border-gray-200 rounded-xl focus:outline-none hover:text-japonica-500 hover:border-japonica-300 transition duration-300 ease-in-out ' %>
       </div>
     </div>
   </div>
