--- a/app/views/shared/navbar/_nav_buttons_before_login.html.erb
+++ b/app/views/shared/navbar/_nav_buttons_before_login.html.erb
@@ -1,17 +1,17 @@
 <div class="flex space-x-2 xl:space-x-4">
-  <div class="<%= params[:action] == "home" ? 'px-2 py-1 rounded text-sm font-semibold text-gray-600 bg-gray-200 focus:outline-none xl:text-base' : 'px-2 py-1 rounded text-sm font-semibold text-gray-600 hover:bg-gray-100 focus:outline-none xl:text-base' %>">
+  <div class="<%= params[:action] == "home" ? 'px-2 py-1 rounded text-sm font-semibold text-gray-600 bg-gray-200 focus:outline-none xl:text-base' : 'px-2 py-1 rounded text-sm font-semibold text-gray-600 hover:bg-gray-100 focus:outline-none transition duration-200 ease-in-out xl:text-base' %>">
     <%= link_to "Accueil", root_path %>
   </div>
-  <div class="<%= params[:controller] == "items" ? 'px-2 py-1 rounded text-sm font-semibold text-gray-600 bg-gray-200 focus:outline-none xl:text-base' : 'px-2 py-1 rounded text-sm font-semibold text-gray-600 hover:bg-gray-100 focus:outline-none xl:text-base' %>">
+  <div class="<%= params[:controller] == "items" ? 'px-2 py-1 rounded text-sm font-semibold text-gray-600 bg-gray-200 focus:outline-none xl:text-base' : 'px-2 py-1 rounded text-sm font-semibold text-gray-600 hover:bg-gray-100 focus:outline-none transition duration-200 ease-in-out xl:text-base' %>">
     <%= link_to "Magasin", items_path %>
   </div>
-  <div class="<%= params[:controller] == "articles" ? 'px-2 py-1 rounded text-sm font-semibold text-gray-600 bg-gray-200 focus:outline-none xl:text-base' : 'px-2 py-1 rounded text-sm font-semibold text-gray-600 hover:bg-gray-100 focus:outline-none xl:text-base' %>">
+  <div class="<%= params[:controller] == "articles" ? 'px-2 py-1 rounded text-sm font-semibold text-gray-600 bg-gray-200 focus:outline-none xl:text-base' : 'px-2 py-1 rounded text-sm font-semibold text-gray-600 hover:bg-gray-100 focus:outline-none transition duration-200 ease-in-out xl:text-base' %>">
     <%= link_to "Journal", articles_path %>
   </div>
-  <div class="<%= params[:action] == "about" ? 'px-2 py-1 rounded text-sm font-semibold text-gray-600 bg-gray-200 focus:outline-none xl:text-base' : 'px-2 py-1 rounded text-sm font-semibold text-gray-600 hover:bg-gray-100 focus:outline-none xl:text-base' %>">
+  <div class="<%= params[:action] == "about" ? 'px-2 py-1 rounded text-sm font-semibold text-gray-600 bg-gray-200 focus:outline-none xl:text-base' : 'px-2 py-1 rounded text-sm font-semibold text-gray-600 hover:bg-gray-100 focus:outline-none transition duration-200 ease-in-out xl:text-base' %>">
     <%= link_to "A propos", about_path %>
   </div>
-  <div class="<%= params[:controller] == "contacts" ? 'px-2 py-1 rounded text-sm font-semibold text-gray-600 bg-gray-200 focus:outline-none xl:text-base' : 'px-2 py-1 rounded text-sm font-semibold text-gray-600 hover:bg-gray-100 focus:outline-none xl:text-base' %>">
+  <div class="<%= params[:controller] == "contacts" ? 'px-2 py-1 rounded text-sm font-semibold text-gray-600 bg-gray-200 focus:outline-none xl:text-base' : 'px-2 py-1 rounded text-sm font-semibold text-gray-600 hover:bg-gray-100 focus:outline-none transition duration-200 ease-in-out xl:text-base' %>">
     <%= link_to "Contactez-moi", new_contact_path %>
   </div>
 </div>
