--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,7 +9,7 @@
             <h1 class="text-gray-700 font-bold font-cursive tracking-tight text-3xl xl:text-4xl 2xl:text-5xl">Objets en céramique <br> fait main</h1>
           </div>
           <div class="pt-6 flex justify-center lg:justify-start px-4 lg:pt-16">
-            <%= link_to "Découvrir", items_path, class:'py-3 px-4 text-base text-white font-bold hover:bg-japonica-500 border-2 border-white rounded-full tracking-wide bg-gray-700 hover:text-white focus:outline-none transition duration-500 ease-in-out lg:text-lg xl:px-6 xl:py-4 xl:text-xl' %>
+            <%= link_to "Découvrir", items_path, class:'py-3 px-4 text-base text-white font-bold bg-japonica-500 border-2 border-white rounded-full tracking-wide hover:bg-gray-700 hover:text-white focus:outline-none transition duration-500 ease-in-out lg:text-lg xl:px-6 xl:py-4 xl:text-xl' %>
           </div>
         </div>
         <svg class="hidden lg:block z-10 absolute left-1/3 inset-y-0 w-48 h-banner text-gray-50 transform translate-x-1/2" fill="currentColor" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true">
