--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="px-4 pt-12 bg-gray-900 md:px-8">
+<footer class="px-2 pt-12 bg-gray-900">
   <div class="lg:flex lg:space-x-12 max-w-7xl mx-auto">
     <div class="lg:w-1/2">
       <div>
