color change a bit and free delivery added to home

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -108,8 +108,9 @@
                     </div>
                   </div>
                 <% else %>
-                  <div class="pt-2 px-2">
+                  <div class="pt-2 px-2 flex items-center justify-between">
                     <span class="font-medium text-gray-800"> <%= item.price %>€ </span>
+                    <span class="px-2 py-0.5 text-gray-700 bg-japonica-200 rounded-full text-xs italic font-semibold tracking-wide">Livraison gratuite</span>
                   </div>
                 <% end %>
               </div>
