--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,12 +16,12 @@
           <polygon points="39,0 100,0 50,100 0,100" />
         </svg>
         <div class="hidden z-0 lg:flex lg:absolute lg:w-full lg:-right-1/2 lg:-top-1/3 ">
-          <%= image_tag 'https://scontent.fcdg1-1.fna.fbcdn.net/v/t1.15752-9/164144896_154237586558379_6558018842828740839_n.png?_nc_cat=109&ccb=1-3&_nc_sid=ae9488&_nc_ohc=Fi-g7W5ndeIAX_EsEGL&_nc_ht=scontent.fcdg1-1.fna&oh=57bd5393057b9fa19060c0f894441d88&oe=607F8CB9', class:'lg:w-full lg:object-cover lg:h-banner', alt:'#' %>
+          <%= image_tag 'banner.png', class:'lg:w-full lg:object-cover lg:h-banner', alt:'#' %>
         </div>
 
       </div>
       <div class="h-1/2 lg:hidden">
-        <%= image_tag 'https://scontent.fcdg1-1.fna.fbcdn.net/v/t1.15752-9/164144896_154237586558379_6558018842828740839_n.png?_nc_cat=109&ccb=1-3&_nc_sid=ae9488&_nc_ohc=Fi-g7W5ndeIAX_EsEGL&_nc_ht=scontent.fcdg1-1.fna&oh=57bd5393057b9fa19060c0f894441d88&oe=607F8CB9', class:'h-full w-full object-cover', alt:'#' %>
+        <%= image_tag 'banner.png', class:'h-full w-full object-cover', alt:'#' %>
       </div>
 
     </div>
