--- a/app/views/shared/menu/_menu_after_login.html.erb
+++ b/app/views/shared/menu/_menu_after_login.html.erb
@@ -61,7 +61,7 @@
   <!-- </div> -->
   <!-- <div class="px-6 py-4">
     <div class="text-lg flex items-center  space-x-4">
-      <%#= cl_image_tag current_user.profil_pic, class:"h-12 rounded-full border-4 border-japonica-500" %>
+      <%#= cl_image_tag current_user.profil_pic, :quality=>"auto:low", class:"h-12 rounded-full border-4 border-japonica-500" %>
       <span class="text-lg font-semibold text-gray-700 "> <%#= current_user.name %> </span>
     </div>
     <div>
