--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -7,7 +7,7 @@
       <%= link_to article_path(article), class:"bg-white lg:w-1/3 rounded overflow-hidden shadow-2xl" do %>
         <!-- photo on mobile small fix for now need to create padding bottom for tailwind in config file -->
         <div class="relative h-64 pb-4/5 lg:h-80">
-          <span> <%= cl_image_tag article.photo.key, class:'absolute h-full w-full inset-0 object-cover shadow' %> </span>
+          <span> <%= cl_image_tag article.photo.key, :quality=>"auto:low", class:'absolute h-full w-full inset-0 object-cover shadow' %> </span>
         </div>
         <!-- photo on desktop -->
         <div class="flex flex-col px-4 ">
@@ -34,7 +34,7 @@
     </div>
     <div class="w-1/2 bg-white overflow-hidden shadow-2xl rounded lg:order-2 lg:my-12">
       <div class="relative" style="padding-bottom: 85%;">
-        <span> <%= cl_image_tag Article.last.photo.key, class:'absolute h-full w-full inset-0 object-cover object-center shadow' %> </span>
+        <span> <%= cl_image_tag Article.last.photo.key, :quality=>"auto:low", class:'absolute h-full w-full inset-0 object-cover object-center shadow' %> </span>
       </div>
       <div class="px-3 flex flex-col">
         <div class="pt-2">
