--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -18,7 +18,7 @@
     </div>
   </div>
   <div class="relative h-64 w-full">
-    <%= cl_image_tag @article.photo.key, class:'absolute h-full w-full inset-0 object-cover shadow rounded' %>
+    <%= cl_image_tag @article.photo.key, :quality=>"auto:low", class:'absolute h-full w-full inset-0 object-cover shadow rounded' %>
   </div>
 
   <div class="pt-8 text-gray-600 max-w-prose mx-auto">
