--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -38,7 +38,7 @@
         <% @order.cart.cart_items.each do |cart_item| %>
           <div class="flex flex-col items-start">
             <div class="pt-10">
-              <%= cl_image_tag cart_item.item.photos[0].key, class:"w-full h-72 object-cover #{image_position(cart_item.item)} rounded-xl" %>
+              <%= cl_image_tag cart_item.item.photos[0].key, :quality=>"auto:low", class:"w-full h-72 object-cover #{image_position(cart_item.item)} rounded-xl" %>
             </div>
             <span class="pt-2 text-japonica-500 font-bold text-sm"> <%= cart_item.item.category %></span>
             <div class="flex justify-between items-center w-full pb-4">
@@ -82,7 +82,7 @@
         <% @order.cart.cart_items.each do |cart_item| %>
           <div class="flex flex-col items-start">
             <div class="pt-8">
-              <%= cl_image_tag cart_item.item.photos[0].key, class:"w-full h-36 lg:h-72 object-cover #{image_position(cart_item.item)} rounded-xl" %>
+              <%= cl_image_tag cart_item.item.photos[0].key, :quality=>"auto:low", class:"w-full h-36 lg:h-72 object-cover #{image_position(cart_item.item)} rounded-xl" %>
             </div>
             <span class="pt-2 text-japonica-500 font-bold text-sm"> <%= cart_item.item.category %></span>
             <div class="flex justify-between items-center w-full pb-4">
@@ -123,7 +123,7 @@
         <% @order.cart.cart_items.each do |cart_item| %>
           <div class="flex flex-col items-start">
             <div class="pt-8">
-              <%= cl_image_tag cart_item.item.photos[0].key, class:"w-full h-36 lg:h-72 object-cover #{image_position(cart_item.item)} rounded-xl" %>
+              <%= cl_image_tag cart_item.item.photos[0].key, :quality=>"auto:low", class:"w-full h-36 lg:h-72 object-cover #{image_position(cart_item.item)} rounded-xl" %>
             </div>
             <span class="pt-2 text-japonica-500 font-bold text-sm">  <%= cart_item.item.category %></span>
             <div class="flex justify-between items-center w-full pb-4">
