--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,12 +16,12 @@
           <polygon points="39,0 100,0 50,100 0,100" />
         </svg>
         <div class="hidden z-0 lg:flex lg:absolute lg:w-full lg:-right-1/2 lg:-top-1/3 ">
-          <%= image_tag 'banner.jpg', class:'lg:w-full lg:object-cover lg:h-banner', alt:'#' %>
+          <%= image_tag 'https://res.cloudinary.com/dbdoadukm/image/upload/v1616669876/banner_e6e2lu.jpg', :quality=>"auto:low", :fetch_format => :auto , class:'lg:w-full lg:object-cover lg:h-banner', alt:'#' %>
         </div>
 
       </div>
       <div class="h-1/2 lg:hidden">
-        <%= image_tag 'banner.jpg', class:'h-full w-full object-cover', alt:'#' %>
+        <%= image_tag 'https://res.cloudinary.com/dbdoadukm/image/upload/v1616669876/banner_e6e2lu.jpg', :quality=>"auto:low", :fetch_format => :auto , class:'h-full w-full object-cover', alt:'#' %>
       </div>
 
     </div>
@@ -92,7 +92,7 @@
           <%= link_to item_path(item), class:"" do %>
             <div class="relative pb-2 w-72 rounded-lg lg:w-full border-gray-200 border border-opacity-70 hover:shadow-3xl focus:outline-non transition duration-300 ease-in-out">
               <div class="relative h-68 lg:h-full pb-4/5">
-               <%= cl_image_tag item.photos[0].key, :quality=>"auto:low", class:"rounded-t absolute h-full w-full inset-0 object-cover #{image_position(item)} shadow", alt:'objet en céramique' %>
+               <%= cl_image_tag item.photos[0].key, :quality=>"auto:low", :fetch_format => :auto, class:"rounded-t absolute h-full w-full inset-0 object-cover #{image_position(item)} shadow", alt:'objet en céramique' %>
               </div>
               <div>
                 <div class="pt-4 px-2">
