--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,12 +16,12 @@
           <polygon points="39,0 100,0 50,100 0,100" />
         </svg>
         <div class="hidden z-0 lg:flex lg:absolute lg:w-full lg:-right-1/2 lg:-top-1/3 ">
-          <%= image_tag 'https://res.cloudinary.com/dbdoadukm/image/upload/v1616669876/banner_e6e2lu.jpg', :quality=>"auto:low", :fetch_format => :auto , class:'lg:w-full lg:object-cover lg:h-banner', alt:'#' %>
+          <%= image_tag 'https://res.cloudinary.com/dbdoadukm/image/upload/f_auto,q_auto:low/v1616669876/banner_e6e2lu.jpg', class:'lg:w-full lg:object-cover lg:h-banner', alt:'#' %>
         </div>
 
       </div>
       <div class="h-1/2 lg:hidden">
-        <%= image_tag 'https://res.cloudinary.com/dbdoadukm/image/upload/v1616669876/banner_e6e2lu.jpg', :quality=>"auto:low", :fetch_format => :auto , class:'h-full w-full object-cover', alt:'#' %>
+        <%= image_tag 'https://res.cloudinary.com/dbdoadukm/image/upload/f_auto,q_auto:low/v1616669876/banner_e6e2lu.jpg', class:'h-full w-full object-cover', alt:'#' %>
       </div>
 
     </div>
