--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -92,7 +92,7 @@
           <%= link_to item_path(item), class:"" do %>
             <div class="relative pb-2 w-72 rounded-lg lg:w-full border-gray-200 border border-opacity-70 hover:shadow-3xl focus:outline-non transition duration-300 ease-in-out">
               <div class="relative h-72 lg:h-full pb-4/5">
-               <%= cl_image_tag item.photos[0].key, :transformation=>[{:width=>"auto", :quality=>"auto:low", :fetch_format => :auto }], class:"rounded-t absolute h-full w-full inset-0 object-cover #{image_position(item)} shadow", alt:'objet en céramique' %>
+               <%= cl_image_tag item.photos[0].key, :transformation=>[{:width=>"auto", :height=>400, :dpr=>"auto", :quality=>"auto:low", :fetch_format => :auto }], class:"rounded-t absolute h-full w-full inset-0 object-cover #{image_position(item)} shadow", alt:'objet en céramique' %>
               </div>
               <div>
                 <div class="pt-4 px-2">
