--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -36,14 +36,14 @@
       <%= cl_image_tag @item.photos[0].key, :quality=>"auto:low", class:"absolute h-full w-full inset-0 object-cover shadow rounded-l-lg #{image_position(@item)}", alt:"présentation de l'objet" %>
     </div>
     <div class="relative h-full pb-4/5 col-span-1">
-      <%= cl_image_tag @item.photos[2].key, :quality=>"auto:low", class:"absolute h-full w-full inset-0 object-cover shadow #{image_position(@item)}", alt:"présentation de l'objet" %>
+      <%= cl_image_tag @item.photos[2].key, :transformation=>[{:width=>"auto", :height=>600, :dpr=>"auto", :quality=>"auto:low", :fetch_format => :auto }], class:"absolute h-full w-full inset-0 object-cover shadow #{image_position(@item)}", alt:"présentation de l'objet" %>
     </div>
     <div class="relative h-full pb-4/5 col-span-1">
-      <%= cl_image_tag @item.photos[3].key, :quality=>"auto:low", class:"absolute h-full w-full inset-0 object-cover shadow rounded-tr-lg #{image_position(@item)}", alt:"présentation de l'objet" %>
+      <%= cl_image_tag @item.photos[3].key, :transformation=>[{:width=>"auto", :height=>400, :dpr=>"auto", :quality=>"auto:low", :fetch_format => :auto }], class:"absolute h-full w-full inset-0 object-cover shadow rounded-tr-lg #{image_position(@item)}", alt:"présentation de l'objet" %>
     </div>
 
     <div class="relative h-full col-span-2">
-      <%= cl_image_tag @item.photos[1].key, :quality=>"auto:low", class:"absolute h-full w-full inset-0 object-cover shadow rounded-br-lg #{image_position(@item)}", alt:"présentation de l'objet"  %>
+      <%= cl_image_tag @item.photos[1].key, :transformation=>[{:width=>"auto", :height=>400, :dpr=>"auto", :quality=>"auto:low", :fetch_format => :auto }], class:"absolute h-full w-full inset-0 object-cover shadow rounded-br-lg #{image_position(@item)}", alt:"présentation de l'objet"  %>
 
 <!--     this butoon hide everything and show a carousel with all photos -->
       <button data-action="slideshow#show" class="absolute px-1 py-1 text-gray-700 text-sm flex items-center space-x-2 right-2 bottom-2 bg-white rounded-xl bg-opacity-80 hover:bg-opacity-100 focus:outline-none transition duration-300 ease-in-out">
