--- a/app/views/shared/menu/_menu_after_login.html.erb
+++ b/app/views/shared/menu/_menu_after_login.html.erb
@@ -15,7 +15,7 @@
     </div>
     <div>
       <%= link_to articles_path, class:'px-2 mx-2 py-2 mt-1 text-lg flex items-center space-x-4 hover:bg-white rounded' do %>
-      <svg class="w-8 h-8" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253" stroke="#D97862" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+      <svg class="w-8 h-8 text-japonica-500" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253" stroke="#c05f47" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
       <span class="font-semibold text-gray-600 ">Journal</span>
       <% end %>
     </div>
@@ -52,7 +52,7 @@
     </div>
     <div>
       <%= link_to destroy_user_session_path, class:"px-2 py-2 mt-1 mx-2  flex items-center space-x-4 hover:bg-white rounded", method: :delete do %>
-        <svg class="w-6 h-6" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M13 16v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1m4 8l4-4-4 4zm4-4l-4-4 4 4zm0 0H7h14z" stroke="#D97862" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+        <svg class="w-6 h-6 text-japonica-500" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M13 16v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1m4 8l4-4-4 4zm4-4l-4-4 4 4zm0 0H7h14z" stroke="#c05f47" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
         <span class="font-medium text-gray-600">Se déconnecter</span>
       <% end %>
     </div>
