--- a/app/views/shared/menu/_menu_before_login.html.erb
+++ b/app/views/shared/menu/_menu_before_login.html.erb
@@ -4,7 +4,7 @@
  -->
   <!-- <div>
     <%#= link_to new_user_registration_path, class:"flex items-center space-x-4 hover:bg-white rounded" do %>
-      <svg class="w-8 h-8" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M18 9v3-3zm0 3v3-3zm0 0h3-3zm0 0h-3 3zm-5-5a4 4 0 11-8 0 4 4 0 018 0v0zM3 20a6 6 0 1112 0v1H3v-1z" stroke="#D97862" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+      <svg class="w-8 h-8" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M18 9v3-3zm0 3v3-3zm0 0h3-3zm0 0h-3 3zm-5-5a4 4 0 11-8 0 4 4 0 018 0v0zM3 20a6 6 0 1112 0v1H3v-1z" stroke="#c05f47" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
       <span class="font-semibold text-gray-700 ">Crée un compte</span>
     <%# end %>
   </div> -->
@@ -22,7 +22,7 @@
   </div>
   <div>
     <%= link_to articles_path, class:'text-lg px-2 mx-2 py-2 mt-2 flex items-center space-x-4 hover:bg-white rounded' do %>
-    <svg class="w-8 h-8" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253" stroke="#D97862" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+    <svg class="w-8 h-8 text-japonica-500" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253" stroke="#c05f47" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
     <span class="font-semibold text-gray-700 ">Journal</span>
     <% end %>
   </div>
@@ -42,7 +42,7 @@
 
   <div>
     <%= link_to  new_user_session_path, class:"text-lg px-2 mx-2 py-2 mt-2 flex items-center space-x-4 hover:bg-white rounded" do %>
-      <svg class="w-8 h-8" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M16 16v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h7a3 3 0 013 3v1m-5 8l-4-4 4 4zm-4-4l4-4-4 4zm0 0h14H7z" stroke="#D97862" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+      <svg class="w-8 h-8" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M16 16v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h7a3 3 0 013 3v1m-5 8l-4-4 4 4zm-4-4l4-4-4 4zm0 0h14H7z" stroke="#c05f47" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
       <span class="font-semibold text-gray-700 ">Se connecter</span>
     <% end %>
   </div>
