height fixed in legals page

--- a/app/views/pages/legals.html.erb
+++ b/app/views/pages/legals.html.erb
@@ -1,4 +1,4 @@
-<div class="pt-10 pb-24 px-4 max-w-xl mx-auto min-h-almostscreen">
+<div class="pt-10 pb-36 px-4 max-w-xl mx-auto">
   <h1 class="text-2xl font-medium text-gray-800">Mentions légales concernant Mabciaceramic</h1>
   <span class="text-sm">Mise à jour : 17 mars 2021</span>
 
