--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,15 +51,17 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   </head>
 
-  <body class="min-h-screen bg-gray-50">
+  <body class="min-h-screen bg-gray-900">
+    <div class="bg-gray-50">
+      <%= render "shared/navbar" unless @disable_nav %>
 
-    <%= render "shared/navbar" unless @disable_nav %>
+      <%= render "shared/flashes" %>
 
-    <%= render "shared/flashes" %>
+      <%= yield %>
 
-    <%= yield %>
+      <%= render "shared/footer" unless @disable_footer %>
 
-    <%= render "shared/footer" unless @disable_footer %>
+    </div>
 
   </body>
 </html>
