--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -83,7 +83,7 @@
   </div>
   <div class="mt-12 border-t border-gray-200 px-4 py-8">
     <p class="text-base text-gray-300 xl:text-center">
-      &copy; 2021 Toto, inc. All rights reserved.
+      &copy; 2021 Mabciaceramic, inc. All rights reserved.
     </p>
   </div>
 </footer>
