body color changed

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,7 +51,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   </head>
 
-  <body class="min-h-screen bg-gray-900">
+  <body class="min-h-screen">
     <div class="bg-gray-50">
       <%= render "shared/navbar" unless @disable_nav %>
 
